# apoptosis

./: Cargo.toml  README.md  new_schema.sql
.cargo/: config.toml
src/: config.rs  main.rs
src/api/: auth.rs  server.rs
src/entity/: entities.rs  lua.rs  manager.rs  mod.rs
src/layers/: mod.rs  sample.rs
src/layers/api/: extractors.rs  mod.rs  public_api.rs  server.rs
src/luau/: .luaurc
src/luau/borealis/: memberhandler.luau  state.luau
src/luau/common/: apitypes.luau  blob.luau  bot.luau  lazy.luau
src/luau/common/discord/: discord.luau  gatewayTypes.luau  resttypes.luau
src/luau/common/discord/events/: dispatch.luau
src/luau/common/discord/events/discord/: AutoModActionExecution.luau  AutoModRuleCreate.luau  AutoModRuleDelete.luau  AutoModRuleUpdate.luau  ChannelCreate.luau  ChannelDelete.luau  ChannelPinsUpdate.luau  ChannelUpdate.luau  CommandPermissionsUpdate.luau  EntitlementCreate.luau  EntitlementDelete.luau  EntitlementUpdate.luau  GuildAuditLogEntryCreate.luau  GuildBanAddition.luau  GuildBanRemoval.luau  GuildEmojisUpdate.luau  GuildIntegrationsUpdate.luau  GuildMemberAddition.luau  GuildMemberRemoval.luau  GuildMemberUpdate.luau  GuildRoleCreate.luau  GuildRoleDelete.luau  GuildRoleUpdate.luau  GuildScheduledEventCreate.luau  GuildScheduledEventDelete.luau  GuildScheduledEventUpdate.luau  GuildScheduledEventUserAdd.luau  GuildScheduledEventUserRemove.luau  GuildStickersUpdate.luau  GuildUpdate.luau  IntegrationCreate.luau  IntegrationDelete.luau  IntegrationUpdate.luau  InteractionCreate.luau  InviteCreate.luau  InviteDelete.luau  Message.luau  MessageDelete.luau  MessageDeleteBulk.luau  MessagePollVoteAdd.luau  (+19 more)
src/luau/common/kittycat/: kittycat.luau  rustlayer.luau
src/luau/common/rust/: datamgmt.luau  datetime.luau  interop.luau  json.luau  luau.luau  typesext.luau
src/luau/common/tasks/: concurrency.luau  taskmanager.luau
src/luau/common/utils/: fullmember.luau  misc.luau  roleutils.luau
src/luau/samplelayer/: init.luau
src/migrations/: add_entity_approx_votes.rs  add_known_entities.rs  add_pkeys.rs  mod.rs
src/service/: axum.rs  bot.rs  cacheserver.rs  json.rs  kittycat.rs  layer.rs  lua.rs  mod.rs  optional_value.rs  session.rs  sharedlayer.rs  vfs.rs
src/service/discord/: discordprovider.rs  mod.rs  serenity_backports.rs  structs.rs  validators.rs
src/service/discord/types/: allowed_mentions.rs  app_commands.rs  attachment.rs  auto_moderation.rs  channels.rs  embed.rs  guilds.rs  interactions.rs  message.rs  mod.rs  poll.rs  reaction.rs  serenity_component.rs  webhook.rs
src/service/lua/: mod.rs  vm.rs  vmthread.rs
src/service/lua/require/: asset_requirer.rs  fswrapper.rs  mod.rs  tests.rs  utils.rs  vfs_navigator.rs
src/service/luacore/: blob.rs  datamgmt.rs  datetime.rs  interop.rs  lazy.rs  luau.rs  mod.rs  typesext.rs
src/types/: asset.rs  auth.rs  dovewing.rs  mod.rs  votes.rs
src/utils/: asset.rs  dovewing.rs  mod.rs
