[package]
name = "apoptosis"
version = "0.1.0"
edition = "2024"

[dependencies]
mluau = { git = "https://github.com/mluau/mluau", features = ["serde"] }
mlua_scheduler = { git = "https://github.com/mluau/scheduler" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = "1.48.0"
kittycat = { git = "https://github.com/infinitybotlist/kittycat" }
tokio-util = { version = "0.7", features = ["full"] }
log = "0.4.29"
vfs = { git = "https://github.com/Anti-Raid/rust-vfs" } # TODO: switch to a omniplex fork soon