[package]
name = "apoptosis"
version = "0.1.0"
edition = "2024"

[dependencies]
mluau = { git = "https://github.com/mluau/mluau", features = ["serde"] }
mlua_scheduler = { git = "https://github.com/mluau/scheduler" }
mluau-require = { git = "https://github.com/mluau/mluau-require" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { git = "https://github.com/infinitybotlist/serenity-apoptosis", branch = "next" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
kittycat = { git = "https://github.com/infinitybotlist/kittycat" }
tokio-util = { version = "0.7", features = ["full"] }
log = "0.4.29"
indexmap = "2.12.1"
env_logger = "0.11.8"

# luacore/discord deps
regex = "1"
arrayvec = "0.7"
small-fixed-array = "0.4"
bstr = "1.9"
rand = { version = "0.9", features = ["std"] }
percent-encoding = { version = "2" }
reqwest = { version = "0.12" }
extract_map = { version = "0.3", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }

# blob encryption
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1"

# storage deps
tar = "0.4"

# datetime
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
chrono_lc = "0.1"